{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 33,
  "lineage": "4fdcdbf6-1ddf-c5d5-ea9b-3d87408af598",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a748cd7d41ec77dd",
            "arn": "arn:aws:ec2:us-east-1:339713175022:elastic-ip/eipalloc-0a748cd7d41ec77dd",
            "domain": "vpc",
            "id": "eipalloc-0a748cd7d41ec77dd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-86-67-188.compute-1.amazonaws.com",
            "public_ip": "98.86.67.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nodejs-app-nat-eip"
            },
            "tags_all": {
              "Name": "nodejs-app-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:internet-gateway/igw-0c0a61e169bd53188",
            "id": "igw-0c0a61e169bd53188",
            "owner_id": "339713175022",
            "tags": {
              "Name": "nodejs-app-igw"
            },
            "tags_all": {
              "Name": "nodejs-app-igw"
            },
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713175022:loadbalancer/app/nodejs-app-alb/66b307689c209d57",
            "arn_suffix": "app/nodejs-app-alb/66b307689c209d57",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nodejs-app-alb-395123601.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713175022:loadbalancer/app/nodejs-app-alb/66b307689c209d57",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nodejs-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a155a40676ab48d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-098e91273551990ca"
              },
              {
                "subnet_id": "subnet-0ac3f930791dac266"
              }
            ],
            "subnets": [
              "subnet-098e91273551990ca",
              "subnet-0ac3f930791dac266"
            ],
            "tags": {
              "Name": "nodejs-app-alb"
            },
            "tags_all": {
              "Name": "nodejs-app-alb"
            },
            "vpc_id": "vpc-02c9ee3a56e7c5e38",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713175022:listener/app/nodejs-app-alb/66b307689c209d57/b537f4dcd7b390c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339713175022:targetgroup/nodejs-app-tg/b67e2cb41bfdd6f0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713175022:listener/app/nodejs-app-alb/66b307689c209d57/b537f4dcd7b390c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339713175022:loadbalancer/app/nodejs-app-alb/66b307689c209d57",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713175022:targetgroup/nodejs-app-tg/b67e2cb41bfdd6f0",
            "arn_suffix": "targetgroup/nodejs-app-tg/b67e2cb41bfdd6f0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713175022:targetgroup/nodejs-app-tg/b67e2cb41bfdd6f0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nodejs-app-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a748cd7d41ec77dd",
            "association_id": "eipassoc-0501492b37d660891",
            "connectivity_type": "public",
            "id": "nat-04894cb498fe3a58a",
            "network_interface_id": "eni-034a492964ab884f8",
            "private_ip": "10.0.0.236",
            "public_ip": "98.86.67.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-098e91273551990ca",
            "tags": {
              "Name": "nodejs-app-nat"
            },
            "tags_all": {
              "Name": "nodejs-app-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01b9323a0562f3cbe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04894cb498fe3a58a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b9323a0562f3cbe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c0a61e169bd53188",
            "id": "r-rtb-078332b93731e778a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078332b93731e778a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:route-table/rtb-01b9323a0562f3cbe",
            "id": "rtb-01b9323a0562f3cbe",
            "owner_id": "339713175022",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nodejs-app-rt-private"
            },
            "tags_all": {
              "Name": "nodejs-app-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:route-table/rtb-078332b93731e778a",
            "id": "rtb-078332b93731e778a",
            "owner_id": "339713175022",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nodejs-app-rt-public"
            },
            "tags_all": {
              "Name": "nodejs-app-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089f983dac25bba09",
            "route_table_id": "rtb-01b9323a0562f3cbe",
            "subnet_id": "subnet-05b6570a0da0450e7"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084cbf02641fd0240",
            "route_table_id": "rtb-01b9323a0562f3cbe",
            "subnet_id": "subnet-02a7e3c0adc762e08"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acea7737c666016f",
            "route_table_id": "rtb-078332b93731e778a",
            "subnet_id": "subnet-098e91273551990ca"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b87a80910bff55b",
            "route_table_id": "rtb-078332b93731e778a",
            "subnet_id": "subnet-0ac3f930791dac266"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:security-group/sg-0a155a40676ab48d0",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a155a40676ab48d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nodejs-app-alb-sg",
            "name_prefix": "",
            "owner_id": "339713175022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodejs-app-alb-sg"
            },
            "tags_all": {
              "Name": "nodejs-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:subnet/subnet-05b6570a0da0450e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b6570a0da0450e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713175022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-private-0"
            },
            "tags_all": {
              "Name": "nodejs-app-private-0"
            },
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:subnet/subnet-02a7e3c0adc762e08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a7e3c0adc762e08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713175022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-private-1"
            },
            "tags_all": {
              "Name": "nodejs-app-private-1"
            },
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:subnet/subnet-098e91273551990ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098e91273551990ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713175022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-public-0"
            },
            "tags_all": {
              "Name": "nodejs-app-public-0"
            },
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:subnet/subnet-0ac3f930791dac266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac3f930791dac266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713175022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-public-1"
            },
            "tags_all": {
              "Name": "nodejs-app-public-1"
            },
            "vpc_id": "vpc-02c9ee3a56e7c5e38"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713175022:vpc/vpc-02c9ee3a56e7c5e38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0505aa8a619b3a672",
            "default_route_table_id": "rtb-03a7f2f463dc4a901",
            "default_security_group_id": "sg-0273f0eb5be82184d",
            "dhcp_options_id": "dopt-0d785208e5da2e3bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c9ee3a56e7c5e38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a7f2f463dc4a901",
            "owner_id": "339713175022",
            "tags": {
              "Name": "nodejs-app-vpc"
            },
            "tags_all": {
              "Name": "nodejs-app-vpc"
            }
          }
        }
      ]
    }
  ]
}